--- a/wj-http-center/src/main/resources/application.yml
+++ b/wj-http-center/src/main/resources/application.yml
@@ -187,6 +187,7 @@ secure:
       - /addUser
       - /myUserList
       - /pushEvent
+      - /pushTask
       - /doEventWrite
       - /searchEvents
       - /searchOwerUserInfo
