--- a/wj-http-center/src/main/resources/application.yml
+++ b/wj-http-center/src/main/resources/application.yml
@@ -196,6 +196,8 @@ secure:
       - /userTradeOwer
       - /updataWjuserTrade
       - /tradeTaskAtAreaSev
+      - /tradeTaskAtAreaSevAtArea
+      - /updataSdsEventRelation
 
 
 
