后台服务开发

--- a/wj-manage-center/src/main/resources/application.yml
+++ b/wj-manage-center/src/main/resources/application.yml
@@ -163,7 +163,10 @@ secure:
       #      - /deviceRegist
       - /userLogin
       - /userRegist
-     
+      - /getBaseTabType
+      - /getTabByType
+      - /updateTabByType
+
 
 
 
