--- a/wj-app-center/pom.xml
+++ b/wj-app-center/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>2.1.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.21.0.1</version>
+        </dependency>
         <!-- 分页 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
